fix: make ordered list to have same alignment as unordered list

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -126,32 +126,30 @@ blockquote {
 
     ol {
         list-style-type: decimal;
+        list-style-position: inside;
+        padding-inline-start: rem(20);
     }
 
     li {
         line-height: calc(math.div(24, 16) * var(--fl-lineSpace-factor, 1.5));
     }
 
+    ul li {
+        display: block;
+        align-items: baseline;
+    }
+
     ul li::before {
         background-color: var(--fl-fgColor, var(--grey-200));
-        block-size: 0.3em;
+        block-size: 0.4em;
         border-radius: 50%;
         content: "";
         display: inline-block;
-        inline-size: 0.3em;
-        margin-block: 0.2em;
+        inline-size: 0.4em;
         margin-inline: 0 rem(8);
         outline: solid var(--fl-fgColor, var(--gery-200));
-    }
-
-    ul > li > ul li::before {
-        background-color: transparent;
-        outline: solid;
-    }
-
-    ul > li > ul > li > ul li::before {
-        background-color: var(--fl-fgColor, var(--grey-200));
-        border-radius: unset;
+        position: relative;
+        bottom: 0.2em;
     }
 }
 
